--- a/trainingapp/war/Trainingapp.html
+++ b/trainingapp/war/Trainingapp.html
@@ -20,6 +20,7 @@
 
 <link rel="stylesheet"
 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script
@@ -91,7 +92,7 @@
 					minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 					aliquip ex ea commodo consequat.</p>
 				<hr>
-				<h3>Test</h3>
+				<h3>Table time</h3>
 				<div id="timing"></div>
 
 			</div>
